# rag-pipeline-failure-forensics

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/golden/: qa_dataset.json
data/golden/corpus/: 01-onboarding-guide.md  02-architecture-overview.md  03-deployment-guide.md  04-incident-response-runbook.md  05-on-call-rotation-policy.md  06-security-policy.md  07-data-retention-policy.md  08-api-reference.md
docs/: ARCHITECTURE.md  DECISIONS.md  PROJECT_SPEC.md  session_notes.md
docs/superpowers/plans/: 2026-07-03-answer-confidence-scorer.md  2026-07-04-span-instrumentation.md  2026-07-04-trace-span-models.md
docs/superpowers/specs/: 2026-06-28-document-loader-design.md  2026-07-04-span-instrumentation-design.md  2026-07-04-trace-span-models-design.md
scripts/: run_eval.py  seed_corpus.py
src/: config.py
src/analysis/: __init__.py  evidence_chain.py  failure_categorizer.py  root_cause.py
src/analysis/providers/: evidence_chain_judge_anthropic.py  evidence_chain_judge_openai.py  failure_category_judge_anthropic.py  failure_category_judge_openai.py  step_quality_judge_anthropic.py  step_quality_judge_openai.py
src/api/: __init__.py
src/evaluation/: __init__.py  answer_correctness.py  corpus.py  dataset.py  faithfulness.py  models.py  regression_tracker.py  retrieval_relevance.py  runner.py
src/evaluation/providers/: answer_correctness_judge_anthropic.py  answer_correctness_judge_openai.py  faithfulness_judge_anthropic.py  faithfulness_judge_openai.py
src/frontend/: __init__.py  app.py  corrections.py  detail_panel.py  diagnosis_service.py  diff_panel.py  flags.py  graph_render.py  query_service.py  view_models.py
src/frontend/app_pages/: __init__.py  query_dashboard.py  trace_view.py
src/generation/: __init__.py  answer_generator.py  citation_parser.py  citation_verifier.py  confidence_scorer.py  fallback_response.py  prompts.py
src/generation/providers/: answer_generator_anthropic.py  answer_generator_openai.py  citation_judge_anthropic.py  citation_judge_openai.py  completeness_judge_anthropic.py  completeness_judge_openai.py
src/ingestion/: __init__.py  chunker.py  loader.py  models.py  storage.py
src/retrieval/: __init__.py  bm25_store.py  dense_retriever.py  embedder.py  fusion.py  hybrid_retriever.py  indexer.py  models.py  reranker.py  sparse_retriever.py  vector_store.py
src/retrieval/providers/: embedder_cohere.py  embedder_gemini.py  embedder_openai.py  embedder_sentence_transformers.py  embedder_voyage.py  reranker_cohere.py  reranker_sentence_transformers.py  reranker_voyage.py
src/tracing/: __init__.py  context.py  index.py  instrumentation.py  models.py  persistence.py  storage.py
tests/: conftest.py
tests/fixtures/: create_pdf.py  sample.html  sample.md  sample.txt
tests/integration/: test_ingestion_roundtrip.py
tests/unit/: test_config.py
tests/unit/analysis/: test_evidence_chain.py  test_failure_categorizer.py  test_root_cause.py
tests/unit/evaluation/: test_answer_correctness.py  test_corpus.py  test_dataset.py  test_faithfulness.py  test_models.py  (+4 more)
(+60 files in other folders)
