[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Production-grade RAG pipeline with integrated failure forensics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Vector store
    "chromadb>=0.5",
    # Sparse search
    "rank-bm25>=0.2.2",
    # Chunking / document loading
    "langchain-text-splitters>=0.2",
    "langchain-community>=0.2",
    # Document parsers
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    # Numerical
    "numpy>=1.26",
    # Reranker (default embeddings provider)
    "sentence-transformers>=3.0",
    # Config and models
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Utilities
    "tqdm>=4.66",
    "httpx>=0.27",
]

[project.optional-dependencies]
embed-openai = ["openai>=1.92.0"]
embed-voyage = ["voyageai>=0.3"]
embed-gemini = ["google-genai>=1.0"]
embed-cohere = ["cohere>=5.0"]
embed-local = ["sentence-transformers>=3.0"]
llm-anthropic = ["anthropic>=0.100.0"]
store-qdrant = ["qdrant-client>=1.9"]
frontend = ["streamlit>=1.38", "streamlit-flow-component>=1.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
